--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "debug": "^4.3.3",
     "express": "^4.17.1",
     "joi": "^17.5.0",
-    "mysql2": "^2.3.3"
+    "morgan": "^1.10.0",
+    "mysql2": "^2.3.3",
+    "pug": "^3.0.2"
   }
 }
